[tool.poetry]
name = "rocshers"
version = "0.1.0"
description = ""
authors = ["jendos <huiartman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
pytest = "^7.2.0"
urlextract = "^1.7.1"
extractor = "^0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
